# langchain_rag_agents

./: pyproject.toml
Vector_Simularities_FAISS/: Faiss_intro.md  bm25.md  lesson_2.ipynb  lesson_3.ipynb
conspects/: 1_prompts_langchain.md  1_prompts_langchain_1.md  2_langchain_structured_output.md  3_langchain_chains.md  4_langchain_memory.md  5.langchain_agents.md  6_rag.md
notebooks/: M3_LangChain_Chains.ipynb  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb  part_1.md  study.ipynb
