[tool.poetry]
name = "langchain_vectordb"
version = "0.1.0"
description = ""
authors = ["Amircphys <amirchik052012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.3.33"
langchain = "^0.3.27"
openai = "1.109.1"
python-dotenv = "^1.1.1"
tiktoken = "^0.11.0"
numexpr = "^2.13.1"
langchain-core = "^0.3.77"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
